crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__const_array_destruct_init.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                ArrayDestructInit(
                    (
                        true,
                        5..10,
                    ),
                    (
                        "const",
                        5..10,
                    ),
                    [
                        (
                            "a",
                            12..13,
                        ),
                        (
                            "b",
                            15..16,
                        ),
                    ],
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Int(
                                                (
                                                    1,
                                                    21..22,
                                                ),
                                            ),
                                            21..22,
                                        ),
                                        (
                                            Int(
                                                (
                                                    2,
                                                    24..25,
                                                ),
                                            ),
                                            24..25,
                                        ),
                                    ],
                                ),
                                20..26,
                            ),
                        ),
                        20..26,
                    ),
                ),
                5..26,
            ),
        ),
        5..26,
    ),
]
