crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__context_string_to_main.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(r#\"\"start {expr} end\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "start ",
        ),
        1..7,
    ),
    (
        Token(
            "{",
        ),
        7..8,
    ),
    (
        Token(
            "expr",
        ),
        8..12,
    ),
    (
        Token(
            "}",
        ),
        12..13,
    ),
    (
        Token(
            " end",
        ),
        13..17,
    ),
    (
        Token(
            "\"",
        ),
        17..18,
    ),
]
