crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__dollar_at_end.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"text$\")"
---
[
    (
        Token(
            "text",
        ),
        0..4,
    ),
    (
        Token(
            "$",
        ),
        4..5,
    ),
]
