crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__dollar_dollar_char.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"$$x\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "x",
        ),
        2..3,
    ),
]
