crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__double_dollar_end.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"$$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
